Drop MaxPermSize support from compiler daemon
    #KT-17045 Fixed